fixed background on mobile

--- a/src/styles/cover.css
+++ b/src/styles/cover.css
@@ -83,7 +83,7 @@ min-width: 100vh;
 
 .about {
 
-  height: 100vh;
+  min-height: 150vh;
   text-align: center;
 
 
